Closed Bug 206743 Opened 23 years ago Closed 23 years ago

Fix double initialization of nsDocAccessible's

Categories

(Core :: Disability Access APIs, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

Details

Attachments

(1 file)

When nsDocAccessible::Init() needs to create it's outer doc accessible parent, a bad code path occurs: CreateOuterDocAccessible is called, it in turn calls nsDocAccessible::Init() again. In the end, an assertion happens because the accessibility code is trying to add the same node to the cache twice. This cleans up the code that handles the relationship between inner and outer doc accessibles.
Attachment #123978 - Flags: review?(kyle.yuan)
Comment on attachment 123978 [details] [diff] [review] Cleans up inner/outer doc relationship (also adds some null checks for shut down nodes in ISimpleDOMText) r=kyle
Attachment #123978 - Flags: review?(kyle.yuan) → review+
Attachment #123978 - Flags: superreview?(Henry.Jia)
Comment on attachment 123978 [details] [diff] [review] Cleans up inner/outer doc relationship (also adds some null checks for shut down nodes in ISimpleDOMText) Seems ok. sr=Henry Just one thing: try to use if (condition) { } instead of if (condition) { }
Attachment #123978 - Flags: superreview?(Henry.Jia) → superreview+
Henry, I'm planning to follow the coding style guide at: http://www.mozilla.org/hacking/mozilla-style-guide.html It has rules for whitespace here: http://www.mozilla.org/hacking/mozilla-style-guide.html#Visual
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Thx, aaronl.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: