Bug 206743. Clean up initialization of inner/outer doc accessible objects. r=kyle, sr=henry